[project]
name = "sampling"
version = "0.1.0"
description = ""
authors = [
    {name = "morsoletodev",email = "106322393+morsoletodev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.2)",
    "xgboost (>=3.0.2,<4.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

